feat: Add interactive parameter tuning for Radon and Curvelet
- Radon Transform: Add τ-p domain visualization for manual inspection
  - Display original, filtered, and removed components in τ-p domain
  - Expose threshold_percentile, p_min, p_max, n_p parameters
  - Add real-time visual feedback for parameter adjustment

- Curvelet Denoise: Add wavelet coefficient visualization
  - Display Horizontal/Vertical/Diagonal coefficients before/after thresholding
  - Expose threshold_scale, wavelet type, decomposition level parameters
  - Show actual threshold values used

- Split radon_transform_demultiple into forward/inverse/complete methods
- Add return_coeffs flag to curvelet_denoise for visualization
- Enable user-controlled parameter optimization workflow
- Provide detailed guidance for parameter adjustment ranges

User can now directly observe τ-p and wavelet domains to fine-tune processing performance

--- a/Shot_Gather_Interactive.ipynb
+++ b/Shot_Gather_Interactive.ipynb
@@ -336,11 +336,9 @@
     "        \n",
     "        return result\n",
     "    \n",
-    "    def radon_transform_demultiple(self, shot_gather, offsets, p_min=-0.001, p_max=0.001, n_p=128):\n",
-    "        \"\"\"Radon Transform 기반 Demultiple\"\"\"\n",
+    "    def radon_forward_transform(self, shot_gather, offsets, p_min=-0.001, p_max=0.001, n_p=128):\n",
+    "        \"\"\"Forward Radon Transform (t-x -> tau-p)\"\"\"\n",
     "        nt, n_traces = shot_gather.shape\n",
-    "        \n",
-    "        # Radon parameter (ray parameter)\n",
     "        p_values = np.linspace(p_min, p_max, n_p)\n",
     "        \n",
     "        # Forward Radon Transform\n",
@@ -349,20 +347,19 @@
     "            for it in range(nt):\n",
     "                t0 = self.time[it]\n",
     "                for ix, offset in enumerate(offsets):\n",
-    "                    # 쌍곡선 경로\n",
     "                    tau = t0 + p * offset\n",
     "                    tau_idx = int(tau / self.dt)\n",
     "                    if 0 <= tau_idx < nt:\n",
     "                        radon_domain[it, ip] += shot_gather[tau_idx, ix]\n",
     "        \n",
-    "        # Multiple 억제 (저속도 성분)\n",
-    "        # Multiples는 일반적으로 낮은 ray parameter\n",
-    "        threshold = np.percentile(np.abs(radon_domain), 75)\n",
-    "        mask = np.abs(radon_domain) > threshold\n",
-    "        radon_filtered = radon_domain * mask\n",
+    "        return radon_domain, p_values\n",
+    "    \n",
+    "    def radon_inverse_transform(self, radon_domain, p_values, offsets, nt):\n",
+    "        \"\"\"Inverse Radon Transform (tau-p -> t-x)\"\"\"\n",
+    "        n_p = len(p_values)\n",
+    "        n_traces = len(offsets)\n",
+    "        result = np.zeros((nt, n_traces))\n",
     "        \n",
-    "        # Inverse Radon Transform\n",
-    "        result = np.zeros_like(shot_gather)\n",
     "        for ix, offset in enumerate(offsets):\n",
     "            for it in range(nt):\n",
     "                t0 = self.time[it]\n",
@@ -370,12 +367,25 @@
     "                    tau = t0 + p * offset\n",
     "                    tau_idx = int(tau / self.dt)\n",
     "                    if 0 <= tau_idx < nt:\n",
-    "                        result[it, ix] += radon_filtered[tau_idx, ip]\n",
+    "                        result[it, ix] += radon_domain[tau_idx, ip]\n",
     "        \n",
-    "        # 정규화\n",
     "        result /= n_p\n",
-    "        \n",
     "        return result\n",
+    "    \n",
+    "    def radon_transform_demultiple(self, shot_gather, offsets, p_min=-0.001, p_max=0.001, n_p=128, threshold_percentile=75):\n",
+    "        \"\"\"Radon Transform 기반 Demultiple (파라미터 조정 가능)\"\"\"\n",
+    "        # Forward transform\n",
+    "        radon_domain, p_values = self.radon_forward_transform(shot_gather, offsets, p_min, p_max, n_p)\n",
+    "        \n",
+    "        # Multiple 억제\n",
+    "        threshold = np.percentile(np.abs(radon_domain), threshold_percentile)\n",
+    "        mask = np.abs(radon_domain) > threshold\n",
+    "        radon_filtered = radon_domain * mask\n",
+    "        \n",
+    "        # Inverse transform\n",
+    "        result = self.radon_inverse_transform(radon_filtered, p_values, offsets, self.nt)\n",
+    "        \n",
+    "        return result, radon_domain, radon_filtered, p_values\n",
     "    \n",
     "    def anomalous_amplitude_attenuation(self, shot_gather, window_size=50, threshold_factor=3.0):\n",
     "        \"\"\"Anomalous Amplitude Attenuation (이상 진폭 감쇠)\"\"\"\n",
@@ -406,8 +416,8 @@
     "        \n",
     "        return result\n",
     "    \n",
-    "    def curvelet_denoise(self, shot_gather, wavelet='db4', level=None, threshold_scale=1.5):\n",
-    "        \"\"\"Curvelet 기반 노이즈 제거 (Wavelet 근사)\"\"\"\n",
+    "    def curvelet_denoise(self, shot_gather, wavelet='db4', level=None, threshold_scale=1.5, return_coeffs=False):\n",
+    "        \"\"\"Curvelet 기반 노이즈 제거 (Wavelet 근사) - 파라미터 조정 가능\"\"\"\n",
     "        result = np.zeros_like(shot_gather)\n",
     "        nt, n_traces = shot_gather.shape\n",
     "        \n",
@@ -434,17 +444,19 @@
     "            result[:, ix] = pywt.waverec(coeffs_thresh, wavelet)[:nt]\n",
     "        \n",
     "        # 2D Wavelet denoising (방향성 고려)\n",
+    "        coeffs2d_original = None\n",
+    "        coeffs2d_thresh = None\n",
     "        try:\n",
     "            # 2D stationary wavelet transform\n",
-    "            coeffs2d = pywt.swt2(shot_gather, wavelet, level=3)\n",
+    "            coeffs2d_original = pywt.swt2(shot_gather, wavelet, level=3)\n",
     "            \n",
     "            # Threshold\n",
-    "            sigma2d = np.median(np.abs(coeffs2d[-1][1])) / 0.6745\n",
+    "            sigma2d = np.median(np.abs(coeffs2d_original[-1][1])) / 0.6745\n",
     "            threshold2d = threshold_scale * sigma2d * np.sqrt(2 * np.log(nt * n_traces))\n",
     "            \n",
     "            # Apply thresholding\n",
     "            coeffs2d_thresh = []\n",
-    "            for c in coeffs2d:\n",
+    "            for c in coeffs2d_original:\n",
     "                cA = c[0]\n",
     "                cH = pywt.threshold(c[1][0], threshold2d, mode='soft')\n",
     "                cV = pywt.threshold(c[1][1], threshold2d, mode='soft')\n",
@@ -456,7 +468,10 @@
     "        except:\n",
     "            pass  # 1D 결과 사용\n",
     "        \n",
-    "        return result\n",
+    "        if return_coeffs:\n",
+    "            return result, coeffs2d_original, coeffs2d_thresh, threshold2d\n",
+    "        else:\n",
+    "            return result\n",
     "    \n",
     "    def plot_model(self, model: Dict):\n",
     "        \"\"\"지층 모델 시각화\"\"\"\n",
@@ -548,7 +563,7 @@
     "print(\"  1. Water Bottom Demultiple\")\n",
     "print(\"  2. Radon Transform Demultiple\")\n",
     "print(\"  3. Anomalous Amplitude Attenuation\")\n",
-    "print(\"  4. Curvelet Denoise\")"
+    "print(\"  4. Curvelet Denoise\")\n"
    ]
   },
   {
@@ -722,13 +737,14 @@
     "id": "step8"
    },
    "source": [
-    "## 🔄 Step 8: Radon Transform Demultiple\n",
+    "## 🔄 Step 8: Radon Transform Demultiple (인터랙티브)\n",
     "\n",
     "**이 셀을 실행하면:**\n",
     "- Radon 변환으로 t-x → τ-p 도메인 변환\n",
+    "- **τ-p 도메인 시각화** (원본 + 필터링)\n",
     "- Multiple 성분 억제 (낮은 ray parameter)\n",
     "- 역변환으로 복원\n",
-    "- 즉시 시각화"
+    "- **파라미터 조정**: `threshold_percentile`, `p_min`, `p_max`, `n_p`"
    ]
   },
   {
@@ -746,11 +762,31 @@
     "print(\"   - Multiple 성분 억제 (낮은 ray parameter)\")\n",
     "print(\"   - Inverse Radon Transform (τ-p → t-x)\")\n",
     "print()\n",
+    "print(\"⚙️ 파라미터 조정 가능:\")\n",
+    "print(\"   - threshold_percentile: Multiple 제거 임계값 (기본 75)\")\n",
+    "print(\"   - p_min, p_max: Ray parameter 범위\")\n",
+    "print(\"   - n_p: Ray parameter 샘플 수\")\n",
+    "print()\n",
     "print(\"⏳ 처리 중... (시간이 걸릴 수 있습니다)\")\n",
     "\n",
-    "# Radon Transform Demultiple\n",
-    "after_radon = processor.radon_transform_demultiple(after_wb, offsets, \n",
-    "                                                    p_min=-0.001, p_max=0.001, n_p=64)\n",
+    "# 🔧 여기서 파라미터 조정!\n",
+    "threshold_percentile = 75  # 낮추면 더 많이 제거 (예: 50, 60, 70, 75, 80, 90)\n",
+    "p_min = -0.001  # Ray parameter 최소값\n",
+    "p_max = 0.001   # Ray parameter 최대값\n",
+    "n_p = 64        # Ray parameter 샘플 수\n",
+    "\n",
+    "print(f\"\\n📌 현재 파라미터:\")\n",
+    "print(f\"   - Threshold Percentile: {threshold_percentile}\")\n",
+    "print(f\"   - Ray Parameter Range: [{p_min}, {p_max}]\")\n",
+    "print(f\"   - Number of Ray Parameters: {n_p}\")\n",
+    "print()\n",
+    "\n",
+    "# Radon Transform Demultiple (반환값 확장)\n",
+    "after_radon, radon_original, radon_filtered, p_values = processor.radon_transform_demultiple(\n",
+    "    after_wb, offsets, \n",
+    "    p_min=p_min, p_max=p_max, n_p=n_p, \n",
+    "    threshold_percentile=threshold_percentile\n",
+    ")\n",
     "\n",
     "print(\"✅ Radon Transform Demultiple 완료!\")\n",
     "print()\n",
@@ -765,9 +801,58 @@
     "print(f\"   - Additional Reduction: {(1 - np.sqrt(np.mean(after_radon**2))/np.sqrt(np.mean(after_wb**2)))*100:.1f}%\")\n",
     "print()\n",
     "\n",
+    "# 🎨 τ-p 도메인 시각화 (원본 vs 필터링)\n",
+    "print(\"📊 τ-p 도메인 시각화...\")\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(20, 8))\n",
+    "\n",
+    "# 원본 Radon 도메인\n",
+    "vmax_radon = np.percentile(np.abs(radon_original), 99)\n",
+    "axes[0].imshow(radon_original, aspect='auto', cmap='seismic', \n",
+    "               vmin=-vmax_radon, vmax=vmax_radon, \n",
+    "               extent=[p_values[0]*1000, p_values[-1]*1000, processor.time[-1], processor.time[0]])\n",
+    "axes[0].set_xlabel('Ray Parameter p (×10⁻³ s/m)', fontsize=12, fontweight='bold')\n",
+    "axes[0].set_ylabel('Intercept Time τ (s)', fontsize=12, fontweight='bold')\n",
+    "axes[0].set_title('Original Radon Domain (τ-p)', fontsize=14, fontweight='bold')\n",
+    "axes[0].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 필터링된 Radon 도메인\n",
+    "axes[1].imshow(radon_filtered, aspect='auto', cmap='seismic', \n",
+    "               vmin=-vmax_radon, vmax=vmax_radon, \n",
+    "               extent=[p_values[0]*1000, p_values[-1]*1000, processor.time[-1], processor.time[0]])\n",
+    "axes[1].set_xlabel('Ray Parameter p (×10⁻³ s/m)', fontsize=12, fontweight='bold')\n",
+    "axes[1].set_ylabel('Intercept Time τ (s)', fontsize=12, fontweight='bold')\n",
+    "axes[1].set_title(f'Filtered Radon Domain (Threshold={threshold_percentile}%)', fontsize=14, fontweight='bold')\n",
+    "axes[1].grid(True, alpha=0.3)\n",
+    "\n",
+    "# 제거된 성분 (Multiple)\n",
+    "radon_removed = radon_original - radon_filtered\n",
+    "axes[2].imshow(radon_removed, aspect='auto', cmap='seismic', \n",
+    "               vmin=-vmax_radon, vmax=vmax_radon, \n",
+    "               extent=[p_values[0]*1000, p_values[-1]*1000, processor.time[-1], processor.time[0]])\n",
+    "axes[2].set_xlabel('Ray Parameter p (×10⁻³ s/m)', fontsize=12, fontweight='bold')\n",
+    "axes[2].set_ylabel('Intercept Time τ (s)', fontsize=12, fontweight='bold')\n",
+    "axes[2].set_title('Removed Components (Multiples)', fontsize=14, fontweight='bold')\n",
+    "axes[2].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print()\n",
+    "print(\"💡 τ-p 도메인 해석:\")\n",
+    "print(\"   - 원본: Multiple이 저속도(낮은 p 값) 영역에 분포\")\n",
+    "print(\"   - 필터링: 고속도 성분만 남김 (Primary reflection)\")\n",
+    "print(\"   - 제거: Multiple 성분을 τ-p에서 확인\")\n",
+    "print()\n",
+    "print(\"🔧 파라미터 조정 방법:\")\n",
+    "print(\"   - threshold_percentile ↓ → 더 많은 Multiple 제거 (단, 신호 손실 주의)\")\n",
+    "print(\"   - threshold_percentile ↑ → 신호 보존 우선 (Multiple 잔존 가능)\")\n",
+    "print(\"   - n_p ↑ → Ray parameter 해상도 증가 (계산 시간 증가)\")\n",
+    "print()\n",
+    "\n",
     "# 시각화\n",
     "print(\"📈 Radon Transform Demultiple 결과 시각화...\")\n",
-    "processor.plot_shot_gather(after_radon, offsets, \"🔄 After Radon Demultiple\")"
+    "processor.plot_shot_gather(after_radon, offsets, \"🔄 After Radon Demultiple\")\n",
+    "\n"
    ]
   },
   {
@@ -830,14 +915,15 @@
     "id": "step10"
    },
    "source": [
-    "## 🌀 Step 10: Curvelet Denoise\n",
+    "## 🌀 Step 10: Curvelet Denoise (인터랙티브)\n",
     "\n",
     "**이 셀을 실행하면:**\n",
     "- 1D Wavelet 분해 (각 트레이스)\n",
     "- 2D Stationary Wavelet Transform (방향성 고려)\n",
+    "- **Wavelet 계수 시각화** (원본 + Thresholding)\n",
     "- Soft thresholding\n",
     "- Wavelet 재구성\n",
-    "- 즉시 시각화"
+    "- **파라미터 조정**: `threshold_scale`, `wavelet`, `level`"
    ]
   },
   {
@@ -856,10 +942,32 @@
     "print(\"   - Soft thresholding (Donoho)\")\n",
     "print(\"   - Wavelet 재구성\")\n",
     "print()\n",
+    "print(\"⚙️ 파라미터 조정 가능:\")\n",
+    "print(\"   - threshold_scale: Threshold 스케일링 (기본 1.5)\")\n",
+    "print(\"   - wavelet: Wavelet 종류 (db4, sym4, coif2 등)\")\n",
+    "print(\"   - level: 분해 레벨 (None=자동)\")\n",
+    "print()\n",
     "print(\"⏳ 처리 중... (시간이 걸릴 수 있습니다)\")\n",
     "\n",
-    "# Curvelet Denoise\n",
-    "final_shot = processor.curvelet_denoise(after_aaa, wavelet='db4', threshold_scale=1.5)\n",
+    "# 🔧 여기서 파라미터 조정!\n",
+    "threshold_scale = 1.5  # 낮추면 더 많이 제거 (예: 0.5, 1.0, 1.5, 2.0, 2.5)\n",
+    "wavelet_type = 'db4'   # 'db4', 'sym4', 'coif2', 'bior2.2' 등\n",
+    "level = None           # None=자동, 또는 정수 (예: 3, 4, 5)\n",
+    "\n",
+    "print(f\"\\n📌 현재 파라미터:\")\n",
+    "print(f\"   - Threshold Scale: {threshold_scale}\")\n",
+    "print(f\"   - Wavelet Type: {wavelet_type}\")\n",
+    "print(f\"   - Decomposition Level: {level if level else 'Auto'}\")\n",
+    "print()\n",
+    "\n",
+    "# Curvelet Denoise (계수 반환)\n",
+    "final_shot, coeffs_original, coeffs_thresh, threshold_value = processor.curvelet_denoise(\n",
+    "    after_aaa, \n",
+    "    wavelet=wavelet_type, \n",
+    "    level=level, \n",
+    "    threshold_scale=threshold_scale,\n",
+    "    return_coeffs=True\n",
+    ")\n",
     "\n",
     "print(\"✅ Curvelet Denoise 완료!\")\n",
     "print()\n",
@@ -875,6 +983,7 @@
     "print(f\"Before Curvelet RMS:    {np.sqrt(np.mean(after_aaa**2)):.6f}\")\n",
     "print(f\"Final RMS:              {np.sqrt(np.mean(final_shot**2)):.6f}\")\n",
     "print(f\"Removed Noise RMS:      {np.sqrt(np.mean(removed_noise**2)):.6f}\")\n",
+    "print(f\"Threshold Value:        {threshold_value:.6f}\")\n",
     "print()\n",
     "print(f\"SNR (초기):              {snr_initial:.2f} dB\")\n",
     "print(f\"SNR (최종):              {snr_final:.2f} dB\")\n",
@@ -882,9 +991,82 @@
     "print(\"=\"*80)\n",
     "print()\n",
     "\n",
+    "# 🎨 Wavelet 계수 시각화\n",
+    "if coeffs_original is not None and coeffs_thresh is not None:\n",
+    "    print(\"📊 Wavelet 계수 시각화 (Level 3, Horizontal/Vertical/Diagonal)...\")\n",
+    "    \n",
+    "    fig, axes = plt.subplots(2, 3, figsize=(18, 12))\n",
+    "    \n",
+    "    # Level 3 계수 추출\n",
+    "    level_idx = -1  # 마지막 레벨\n",
+    "    cH_orig = coeffs_original[level_idx][1][0]  # Horizontal\n",
+    "    cV_orig = coeffs_original[level_idx][1][1]  # Vertical\n",
+    "    cD_orig = coeffs_original[level_idx][1][2]  # Diagonal\n",
+    "    \n",
+    "    cH_thresh = coeffs_thresh[level_idx][1][0]\n",
+    "    cV_thresh = coeffs_thresh[level_idx][1][1]\n",
+    "    cD_thresh = coeffs_thresh[level_idx][1][2]\n",
+    "    \n",
+    "    vmax = np.percentile(np.abs(cH_orig), 99)\n",
+    "    \n",
+    "    # Original coefficients\n",
+    "    im1 = axes[0, 0].imshow(cH_orig, aspect='auto', cmap='seismic', vmin=-vmax, vmax=vmax)\n",
+    "    axes[0, 0].set_title('Original - Horizontal (cH)', fontsize=12, fontweight='bold')\n",
+    "    axes[0, 0].set_ylabel('Time', fontsize=11)\n",
+    "    axes[0, 0].set_xlabel('Trace', fontsize=11)\n",
+    "    plt.colorbar(im1, ax=axes[0, 0])\n",
+    "    \n",
+    "    im2 = axes[0, 1].imshow(cV_orig, aspect='auto', cmap='seismic', vmin=-vmax, vmax=vmax)\n",
+    "    axes[0, 1].set_title('Original - Vertical (cV)', fontsize=12, fontweight='bold')\n",
+    "    axes[0, 1].set_ylabel('Time', fontsize=11)\n",
+    "    axes[0, 1].set_xlabel('Trace', fontsize=11)\n",
+    "    plt.colorbar(im2, ax=axes[0, 1])\n",
+    "    \n",
+    "    im3 = axes[0, 2].imshow(cD_orig, aspect='auto', cmap='seismic', vmin=-vmax, vmax=vmax)\n",
+    "    axes[0, 2].set_title('Original - Diagonal (cD)', fontsize=12, fontweight='bold')\n",
+    "    axes[0, 2].set_ylabel('Time', fontsize=11)\n",
+    "    axes[0, 2].set_xlabel('Trace', fontsize=11)\n",
+    "    plt.colorbar(im3, ax=axes[0, 2])\n",
+    "    \n",
+    "    # Thresholded coefficients\n",
+    "    im4 = axes[1, 0].imshow(cH_thresh, aspect='auto', cmap='seismic', vmin=-vmax, vmax=vmax)\n",
+    "    axes[1, 0].set_title(f'Thresholded - Horizontal (scale={threshold_scale})', fontsize=12, fontweight='bold')\n",
+    "    axes[1, 0].set_ylabel('Time', fontsize=11)\n",
+    "    axes[1, 0].set_xlabel('Trace', fontsize=11)\n",
+    "    plt.colorbar(im4, ax=axes[1, 0])\n",
+    "    \n",
+    "    im5 = axes[1, 1].imshow(cV_thresh, aspect='auto', cmap='seismic', vmin=-vmax, vmax=vmax)\n",
+    "    axes[1, 1].set_title(f'Thresholded - Vertical (scale={threshold_scale})', fontsize=12, fontweight='bold')\n",
+    "    axes[1, 1].set_ylabel('Time', fontsize=11)\n",
+    "    axes[1, 1].set_xlabel('Trace', fontsize=11)\n",
+    "    plt.colorbar(im5, ax=axes[1, 1])\n",
+    "    \n",
+    "    im6 = axes[1, 2].imshow(cD_thresh, aspect='auto', cmap='seismic', vmin=-vmax, vmax=vmax)\n",
+    "    axes[1, 2].set_title(f'Thresholded - Diagonal (scale={threshold_scale})', fontsize=12, fontweight='bold')\n",
+    "    axes[1, 2].set_ylabel('Time', fontsize=11)\n",
+    "    axes[1, 2].set_xlabel('Trace', fontsize=11)\n",
+    "    plt.colorbar(im6, ax=axes[1, 2])\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    print()\n",
+    "    print(\"💡 Wavelet 계수 해석:\")\n",
+    "    print(\"   - Horizontal (cH): 수평 방향 고주파 (층경계)\")\n",
+    "    print(\"   - Vertical (cV): 수직 방향 고주파 (트레이스 간 변화)\")\n",
+    "    print(\"   - Diagonal (cD): 대각선 방향 고주파 (복합 노이즈)\")\n",
+    "    print(\"   - Thresholding 후: 약한 계수 제거 → 노이즈 감소\")\n",
+    "    print()\n",
+    "    print(\"🔧 파라미터 조정 방법:\")\n",
+    "    print(\"   - threshold_scale ↓ → 더 많은 노이즈 제거 (단, 신호 손실 주의)\")\n",
+    "    print(\"   - threshold_scale ↑ → 신호 보존 우선 (노이즈 잔존 가능)\")\n",
+    "    print(\"   - 권장값: 0.5 ~ 2.5 범위에서 조정\")\n",
+    "    print()\n",
+    "\n",
     "# 시각화\n",
     "print(\"📈 최종 결과 시각화...\")\n",
-    "processor.plot_shot_gather(final_shot, offsets, \"🌀 Final: After Curvelet Denoise\")"
+    "processor.plot_shot_gather(final_shot, offsets, \"🌀 Final: After Curvelet Denoise\")\n",
+    "\n"
    ]
   },
   {
