fix: Initialize threshold2d before try block in curvelet_denoise
UnboundLocalError fix:
- threshold2d was only defined inside try block
- If 2D wavelet transform failed, variable was not initialized
- Added default value: threshold2d = 0.0 before try block
- Added explicit exception message for debugging
- Now returns valid values even when 2D transform fails

--- a/Shot_Gather_Interactive.ipynb
+++ b/Shot_Gather_Interactive.ipynb
@@ -479,6 +479,8 @@
     "        # 2D Wavelet denoising (방향성 고려)\n",
     "        coeffs2d_original = None\n",
     "        coeffs2d_thresh = None\n",
+    "        threshold2d = 0.0  # Default value in case 2D transform fails\n",
+    "        \n",
     "        try:\n",
     "            # 2D stationary wavelet transform\n",
     "            coeffs2d_original = pywt.swt2(shot_gather, wavelet, level=3)\n",
@@ -498,8 +500,8 @@
     "            \n",
     "            # Reconstruction\n",
     "            result = pywt.iswt2(coeffs2d_thresh, wavelet)[:nt, :n_traces]\n",
-    "        except:\n",
-    "            pass  # 1D 결과 사용\n",
+    "        except Exception as e:\n",
+    "            print(f\"Warning: 2D wavelet transform failed ({str(e)}), using 1D result\")\n",
     "        \n",
     "        if return_coeffs:\n",
     "            return result, coeffs2d_original, coeffs2d_thresh, threshold2d\n",
