feat: Enhance swell noise model with spatial coherence
Improved swell noise simulation for more realistic ocean conditions:

**New add_swell_noise() method:**
- Multi-component swell: 2-4 frequency components (0.1-0.5 Hz)
- Temporal modulation: Amplitude varies slowly over time (0.05-0.15 Hz)
- Spatial coherence: Phase shift across traces based on wavelength
- Wavelength calculation: λ = 1500 m/s / frequency
- Offset-dependent amplitude variation

**Physical Model:**
Swell = long-wavelength ocean waves from distant storms
- Very low frequency: 0.1-0.5 Hz
- High spatial correlation between traces
- Slowly varying amplitude envelope
- Phase relationship: phase_shift = 2π × offset / wavelength

**Technical Changes:**
- Added dedicated add_swell_noise() method to AdvancedMarineProcessor
- Updated add_marine_noise() signature: now requires offsets parameter
- Replaced simple sinusoidal swell with multi-component coherent model
- Updated Step 6 to pass offsets to add_marine_noise()

**Benefits:**
- More realistic swell noise pattern
- Better test for low-cut filter effectiveness
- Spatially coherent noise (like real ocean data)
- Demonstrates why 1.5 Hz cutoff is important

--- a/Shot_Gather_Interactive.ipynb
+++ b/Shot_Gather_Interactive.ipynb
@@ -262,7 +262,49 @@
     "        \n",
     "        return result\n",
     "    \n",
-    "    def add_marine_noise(self, shot_gather, noise_level: float = 0.08):\n",
+    "    def add_swell_noise(self, shot_gather, offsets, swell_strength=0.5):\n",
+    "        \"\"\"Swell Noise 추가 (Ocean Swell - 해양 너울)\n",
+    "        \n",
+    "        Swell은 먼 곳의 폭풍에서 발생한 장파장 파동으로:\n",
+    "        - 주파수: 0.1-0.5 Hz (매우 낮음)\n",
+    "        - 공간적 coherence: 트레이스 간 상관관계 높음\n",
+    "        - 시간 변조: 느리게 진폭 변화\n",
+    "        \"\"\"\n",
+    "        result = shot_gather.copy()\n",
+    "        nt, n_traces = shot_gather.shape\n",
+    "        signal_power = np.std(shot_gather)\n",
+    "        \n",
+    "        # 여러 swell 주파수 성분 (0.1-0.5 Hz)\n",
+    "        n_components = np.random.randint(2, 4)\n",
+    "        swell_freqs = np.random.uniform(0.1, 0.5, n_components)\n",
+    "        \n",
+    "        for swell_freq in swell_freqs:\n",
+    "            # 시간 변조 (너울의 진폭이 천천히 변화)\n",
+    "            modulation_freq = np.random.uniform(0.05, 0.15)\n",
+    "            time_modulation = 1 + 0.6 * np.sin(2 * np.pi * modulation_freq * self.time)\n",
+    "            \n",
+    "            # 기본 swell 파형\n",
+    "            base_swell = np.sin(2 * np.pi * swell_freq * self.time) * time_modulation\n",
+    "            \n",
+    "            # 트레이스 간 위상 변화 (공간적 coherence)\n",
+    "            # Swell은 긴 파장을 가지므로 트레이스 간 위상이 천천히 변화\n",
+    "            wavelength = 1500.0 / swell_freq  # 수중 음속 1500 m/s\n",
+    "            \n",
+    "            for j, offset in enumerate(offsets):\n",
+    "                # 위상 지연 (offset에 따라)\n",
+    "                phase_shift = 2 * np.pi * offset / wavelength\n",
+    "                \n",
+    "                # 트레이스별 swell\n",
+    "                trace_swell = np.sin(2 * np.pi * swell_freq * self.time + phase_shift) * time_modulation\n",
+    "                \n",
+    "                # 진폭 (offset에 따라 약간 변화)\n",
+    "                amplitude = swell_strength * signal_power * (0.8 + 0.4 * np.random.rand())\n",
+    "                \n",
+    "                result[:, j] += amplitude * trace_swell\n",
+    "        \n",
+    "        return result\n",
+    "    \n",
+    "    def add_marine_noise(self, shot_gather, offsets, noise_level: float = 0.08):\n",
     "        \"\"\"해상 노이즈 추가\"\"\"\n",
     "        result = shot_gather.copy()\n",
     "        signal_power = np.std(shot_gather)\n",
@@ -279,12 +321,8 @@
     "            ship_noise *= (1 + 0.3 * np.sin(2 * np.pi * 0.5 * self.time))\n",
     "            result[:, j] += ship_noise\n",
     "        \n",
-    "        # 스웰 노이즈\n",
-    "        swell_freq = np.random.uniform(0.1, 0.5)\n",
-    "        for j in range(n_traces):\n",
-    "            swell_noise = noise_level * signal_power * 0.4 * np.sin(2 * np.pi * swell_freq * self.time)\n",
-    "            swell_noise *= (1 + 0.5 * np.sin(2 * np.pi * 0.2 * self.time))\n",
-    "            result[:, j] += swell_noise\n",
+    "        # 스웰 노이즈 (개선된 모델 사용)\n",
+    "        result = self.add_swell_noise(result, offsets, swell_strength=noise_level * 0.5)\n",
     "        \n",
     "        # 버스트 노이즈\n",
     "        n_bursts = np.random.randint(2, 5)\n",
@@ -600,6 +638,7 @@
     "print(\"  3. Anomalous Amplitude Attenuation\")\n",
     "print(\"  4. Curvelet Denoise\")\n",
     "\n",
+    "\n",
     "\n"
    ]
   },
@@ -694,7 +733,7 @@
     "\n",
     "# Step 6: 해상 노이즈 추가\n",
     "print(\"[4/4] 해상 노이즈 추가...\")\n",
-    "noisy_shot = processor.add_marine_noise(with_multiples, noise_level=0.10)\n",
+    "noisy_shot = processor.add_marine_noise(with_multiples, offsets, noise_level=0.10)\n",
     "print(f\"   ✅ RMS: {np.sqrt(np.mean(noisy_shot**2)):.6f}\")\n",
     "print()\n",
     "\n",
@@ -713,7 +752,7 @@
     "\n",
     "# 시각화\n",
     "print(\"📈 노이즈가 추가된 Shot Gather 시각화...\")\n",
-    "processor.plot_shot_gather(noisy_shot, offsets, \"📢 Noisy Shot Gather (Input)\")"
+    "processor.plot_shot_gather(noisy_shot, offsets, \"📢 Noisy Shot Gather (Input)\")\n"
    ]
   },
   {
