fix: Change swell noise to vertical coherent noise
Corrected swell noise implementation to be vertically coherent:

**Previous (WRONG):**
- Spatial coherence with phase shift across traces
- Different amplitude at same time for each trace
- Appeared as diagonal/curved patterns

**Current (CORRECT):**
- Vertical coherent noise
- SAME amplitude at SAME time for ALL traces
- Appears as horizontal lines/bands in shot gather
- Represents cable vibration or vertical ocean swell component

**Implementation:**
- Generate single time series for each frequency component
- Apply SAME signal to all traces (no spatial variation)
- Multi-component: 2-4 frequencies (0.1-0.5 Hz)
- Temporal modulation for realistic amplitude variation

**Visual Effect:**
Shot gather will show horizontal coherent patterns:

This is the correct model for marine swell noise and cable motion.

--- a/Shot_Gather_Interactive.ipynb
+++ b/Shot_Gather_Interactive.ipynb
@@ -263,12 +263,13 @@
     "        return result\n",
     "    \n",
     "    def add_swell_noise(self, shot_gather, offsets, swell_strength=0.5):\n",
-    "        \"\"\"Swell Noise 추가 (Ocean Swell - 해양 너울)\n",
+    "        \"\"\"Swell Noise 추가 - Vertical Coherent Noise\n",
     "        \n",
-    "        Swell은 먼 곳의 폭풍에서 발생한 장파장 파동으로:\n",
+    "        모든 트레이스에서 동일한 시간에 같은 진폭으로 나타나는 노이즈:\n",
     "        - 주파수: 0.1-0.5 Hz (매우 낮음)\n",
-    "        - 공간적 coherence: 트레이스 간 상관관계 높음\n",
+    "        - Vertical coherence: 모든 offset에서 동일한 값\n",
     "        - 시간 변조: 느리게 진폭 변화\n",
+    "        - 케이블 전체 진동, 해양 너울의 수직 성분\n",
     "        \"\"\"\n",
     "        result = shot_gather.copy()\n",
     "        nt, n_traces = shot_gather.shape\n",
@@ -278,29 +279,25 @@
     "        n_components = np.random.randint(2, 4)\n",
     "        swell_freqs = np.random.uniform(0.1, 0.5, n_components)\n",
     "        \n",
+    "        # Vertical coherent noise: 모든 트레이스에 동일한 시간 신호\n",
+    "        vertical_noise = np.zeros(nt)\n",
+    "        \n",
     "        for swell_freq in swell_freqs:\n",
     "            # 시간 변조 (너울의 진폭이 천천히 변화)\n",
     "            modulation_freq = np.random.uniform(0.05, 0.15)\n",
     "            time_modulation = 1 + 0.6 * np.sin(2 * np.pi * modulation_freq * self.time)\n",
     "            \n",
-    "            # 기본 swell 파형\n",
-    "            base_swell = np.sin(2 * np.pi * swell_freq * self.time) * time_modulation\n",
+    "            # 기본 swell 파형 (vertical component)\n",
+    "            swell_component = np.sin(2 * np.pi * swell_freq * self.time) * time_modulation\n",
     "            \n",
-    "            # 트레이스 간 위상 변화 (공간적 coherence)\n",
-    "            # Swell은 긴 파장을 가지므로 트레이스 간 위상이 천천히 변화\n",
-    "            wavelength = 1500.0 / swell_freq  # 수중 음속 1500 m/s\n",
+    "            # 진폭\n",
+    "            amplitude = swell_strength * signal_power * (0.8 + 0.4 * np.random.rand())\n",
     "            \n",
-    "            for j, offset in enumerate(offsets):\n",
-    "                # 위상 지연 (offset에 따라)\n",
-    "                phase_shift = 2 * np.pi * offset / wavelength\n",
-    "                \n",
-    "                # 트레이스별 swell\n",
-    "                trace_swell = np.sin(2 * np.pi * swell_freq * self.time + phase_shift) * time_modulation\n",
-    "                \n",
-    "                # 진폭 (offset에 따라 약간 변화)\n",
-    "                amplitude = swell_strength * signal_power * (0.8 + 0.4 * np.random.rand())\n",
-    "                \n",
-    "                result[:, j] += amplitude * trace_swell\n",
+    "            vertical_noise += amplitude * swell_component\n",
+    "        \n",
+    "        # 모든 트레이스에 동일한 vertical noise 추가\n",
+    "        for j in range(n_traces):\n",
+    "            result[:, j] += vertical_noise\n",
     "        \n",
     "        return result\n",
     "    \n",
@@ -637,6 +634,7 @@
     "print(\"  2. Radon Transform Demultiple\")\n",
     "print(\"  3. Anomalous Amplitude Attenuation\")\n",
     "print(\"  4. Curvelet Denoise\")\n",
+    "\n",
     "\n",
     "\n",
     "\n"
